fixed white space between footer and section img

--- a/style.css
+++ b/style.css
@@ -69,13 +69,13 @@ section:nth-child(2) img {
 section:nth-child(3) {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 30px;
+  
 }
 
 section:nth-child(3) img {
   
   width: 50%;
-
+  margin-bottom: 30px;
 }
 
 section:nth-child(3) article {
